Изменил User. Обновил Unit-тесты. Добавлен handler для обработки ошибок. Обновлена структура window-management